refactored the toList method to collect(collectors.toList()to fix build run